# delta

./: .gitignore  README.md  delta.py  pyproject.toml
examples/: baseline-config.yaml
src/delta/: __init__.py  __main__.py  apply_ops.py  baseline_ops.py  cli.py  connection.py  diff_ops.py  exceptions.py  log_manager.py  models.py  ownership.py  remote_cmd.py  staging_ops.py  storage.py  ui.py
tests/: test_delta.py
