[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "delta"
version = "0.9.0"
description = "Device filesystem version control tool"
requires-python = ">=3.10"
dependencies = [
    "click>=8.1",
    "pyyaml>=6.0",
]

[project.scripts]
delta = "delta.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
